--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -46,4 +46,4 @@ jobs:
         run: "packer init ./base_docker.pkr.hcl"
       - name: Run `packer build`
         id: build
-        run: "packer build -force -var 'project_id=${{ env.GCP_PROJECT_ID }}' -var-file=variables.pkrvars.hcl ./base_docker.pkr.hcl"
+        run: "packer build -force -var 'project_id=${{ vars.GCP_PROJECT_ID }}' -var-file=variables.pkrvars.hcl ./base_docker.pkr.hcl"
