--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -9,6 +9,7 @@ env:
   WIF_PROVIDER: "projects/616054123395/locations/global/workloadIdentityPools/gha-pool-demo01/providers/github"
   WIF_SERVICE_ACCOUNT: "gha-packer-sa@gcp-demos-390500.iam.gserviceaccount.com"
 
+
 jobs:
   packer-docker-base:
     name: Build Docker BASE
@@ -33,8 +34,6 @@ jobs:
         with:
           workload_identity_provider: ${{ env.WIF_PROVIDER }}
           service_account: ${{ env.WIF_SERVICE_ACCOUNT }}
-#          workload_identity_provider: 'projects/360959748434/locations/global/workloadIdentityPools/gha-gcp-pool-glen/providers/github-gha'
-#          service_account: 'gha-packer-sa@zoey-215712.iam.gserviceaccount.com'
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -47,3 +46,130 @@ jobs:
       - name: Run `packer build`
         id: build
         run: "packer build -force -var 'project_id=${{ vars.GCP_PROJECT_ID }}' -var-file=variables.pkrvars.hcl ./base_docker.pkr.hcl"
+
+
+  packer-consul-base:
+    name: Build Consul BASE
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./hashistack
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          workload_identity_provider: ${{ env.WIF_PROVIDER }}
+          service_account: ${{ env.WIF_SERVICE_ACCOUNT }}
+
+      - name: Setup `packer`
+        uses: hashicorp/setup-packer@main
+        id: setup
+        with:
+          version: ${{ env.PRODUCT_VERSION }}
+      - name: Run `packer init`
+        id: init
+        run: "packer init ./consul_base.pkr.hcl"
+      - name: Run `packer build`
+        id: build
+        run: "packer build -force -var 'project_id=${{ vars.GCP_PROJECT_ID }}' -var-file=variables_consul_base.pkrvars.hcl ./consul_base.pkr.hcl"
+
+
+  packer-consul-server:
+    name: Build Consul SERVER
+    needs: packer-consul-base
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./hashistack
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          workload_identity_provider: ${{ env.WIF_PROVIDER }}
+          service_account: ${{ env.WIF_SERVICE_ACCOUNT }}
+
+      - name: Setup `packer`
+        uses: hashicorp/setup-packer@main
+        id: setup
+        with:
+          version: ${{ env.PRODUCT_VERSION }}
+      - name: Run `packer init`
+        id: init
+        run: "packer init ./consul_server.pkr.hcl"
+      - name: Run `packer build`
+        id: build
+        run: "packer build -force -var 'project_id=${{ vars.GCP_PROJECT_ID }}' -var-file=variables_consul_server.pkrvars.hcl ./consul_server.pkr.hcl"
+
+
+  packer-nomad-client:
+    name: Build Nomad WORKER
+    needs: packer-docker-base
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./hashistack
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          workload_identity_provider: ${{ env.WIF_PROVIDER }}
+          service_account: ${{ env.WIF_SERVICE_ACCOUNT }}
+
+      - name: Setup `packer`
+        uses: hashicorp/setup-packer@main
+        id: setup
+        with:
+          version: ${{ env.PRODUCT_VERSION }}
+      - name: Run `packer init`
+        id: init
+        run: "packer init ./nomad_client.pkr.hcl"
+      - name: Run `packer build`
+        id: build
+        run: "packer build -force -var 'project_id=${{ vars.GCP_PROJECT_ID }}' -var-file=variables_nomad_client.pkrvars.hcl ./nomad_client.pkr.hcl"
+
+
+  packer-nomad-server:
+    name: Build Nomad SERVER
+    needs: packer-consul-base
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./hashistack
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          workload_identity_provider: ${{ env.WIF_PROVIDER }}
+          service_account: ${{ env.WIF_SERVICE_ACCOUNT }}
+
+      - name: Setup `packer`
+        uses: hashicorp/setup-packer@main
+        id: setup
+        with:
+          version: ${{ env.PRODUCT_VERSION }}
+      - name: Run `packer init`
+        id: init
+        run: "packer init ./nomad_server.pkr.hcl"
+      - name: Run `packer build`
+        id: build
+        run: "packer build -force -var 'project_id=${{ vars.GCP_PROJECT_ID }}' -var-file=variables_nomad_server.pkrvars.hcl ./nomad_server.pkr.hcl"
