--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -55,6 +55,10 @@ jobs:
       run:
         working-directory: ./hashistack
 
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -86,6 +90,10 @@ jobs:
     defaults:
       run:
         working-directory: ./hashistack
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
       - name: Checkout
@@ -119,6 +127,10 @@ jobs:
       run:
         working-directory: ./hashistack
 
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -150,6 +162,10 @@ jobs:
     defaults:
       run:
         working-directory: ./hashistack
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
       - name: Checkout
