--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -7,10 +7,10 @@ on:
 
 env:
   PRODUCT_VERSION: "1.11.2" # or: "latest"
-  HCP_ORGANIZATION_ID: '${{ secrets.HCP_ORGANIZATION_ID }}'
-  HCP_PROJECT_ID: '${{ secrets.HCP_PROJECT_ID }}'
-  HCP_CLIENT_ID: '${{ secrets.HCP_CLIENT_ID }}'
-  HCP_CLIENT_SECRET: '${{ secrets.HCP_CLIENT_SECRET }}'
+  #HCP_ORGANIZATION_ID: '${{ secrets.HCP_ORGANIZATION_ID }}'
+  #HCP_PROJECT_ID: '${{ secrets.HCP_PROJECT_ID }}'
+  #HCP_CLIENT_ID: '${{ secrets.HCP_CLIENT_ID }}'
+  #HCP_CLIENT_SECRET: '${{ secrets.HCP_CLIENT_SECRET }}'
 
 
 jobs:
