--- a/hashistack/vault/vault_server.hcl.sample
+++ b/hashistack/vault/vault_server.hcl.sample
@@ -8,6 +8,13 @@ storage "raft" {
   node_id = "raft_node_{NODE_NUM}"
 }
 
+# NOTE: this requires you to be running a local Consul Agent
+# https://developer.hashicorp.com/vault/docs/configuration/storage/consul
+#storage "consul" {
+#  address = "127.0.0.1:8500"
+#  path    = "vault/"
+#}
+
 listener "tcp" {
   address     = "127.0.0.1:8200"
   tls_disable = true
