--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           version: 'latest'
           project_id: '${{ vars.GCP_PROJECT_ID }}'
-          install_components: 'beta'  # optional: install additional components
+          #install_components: 'beta'  # optional: install additional components
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -81,6 +81,12 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+      - name: 'Set up Google Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: 'latest'
+          project_id: '${{ vars.GCP_PROJECT_ID }}'
+          #install_components: 'beta'  # optional: install additional components
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -119,6 +125,12 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+      - name: 'Set up Google Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: 'latest'
+          project_id: '${{ vars.GCP_PROJECT_ID }}'
+          #install_components: 'beta'  # optional: install additional components
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -158,6 +170,12 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+      - name: 'Set up Google Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: 'latest'
+          project_id: '${{ vars.GCP_PROJECT_ID }}'
+          #install_components: 'beta'  # optional: install additional components
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -197,6 +215,12 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+      - name: 'Set up Google Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: 'latest'
+          project_id: '${{ vars.GCP_PROJECT_ID }}'
+          #install_components: 'beta'  # optional: install additional components
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
@@ -236,6 +260,12 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+      - name: 'Set up Google Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: 'latest'
+          project_id: '${{ vars.GCP_PROJECT_ID }}'
+          #install_components: 'beta'  # optional: install additional components
 
       - name: Setup `packer`
         uses: hashicorp/setup-packer@main
