--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -3,7 +3,7 @@ name: Packer Build
 on:
   push:
     branches: [main, dev]
-    paths-ignore: ['**/README.md','**/CHANGELOG.md', 'terraform/*']
+    paths-ignore: ['**/README.md','**/CHANGELOG.md', 'terraform/*', 'oracle-db/*']
 
 env:
   PRODUCT_VERSION: "1.11.2" # or: "latest"
